More intro changes

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -108,41 +108,36 @@ candles and standard rulers can be used to estimate distance using brightness
 and angular size respectively.  In the same way a \emph{standard ping}, a brief
 broadband radio impulse, can be used to estimate radial distance because of the
 characteristic $\lambda^2$ dispersion of electromagnetic signals along the
-line-of-sight as a function of wavelength.  This technique, widely used as an
-approximate distance indicator to pulsars in the Galaxy, can be used to define
-the \emph{dispersion distance} to cosmological sources.
-
-due to intervening plasma
-is readily measured from fast radio bursts (FRB) which are a class
-of radio transient first reported by \citet{2007Sci...318..777L}.
-There have since been 
-10 such bursts reported
+line-of-sight as a function of wavelength.  This technique, routinely done with pulsars in the Galaxy, can be used to define
+a \emph{dispersion distance} to cosmological sources.  Intriguingly, the dispersion of fast radio bursts (FRB), a new class
+of millisecond duration radio transients first reported by \citet{2007Sci...318..777L}, has been measured with high significance. 
+These bursts are the archetype of a standard ping with 
+10 reported
 \citep{2012MNRAS.425L..71K,2013Sci...341...53T,
 2014ApJ...790..101S, 2014ApJ...792...19B, 
-2015MNRAS.447..246P,2015ApJ...799L...5R} and total rate of bursts
+2015MNRAS.447..246P,2015ApJ...799L...5R} to date and total rate of bursts
 been estimated to be $3.3^{+5}_{-2.5} \times 10^3$
 per sky per day \cite{2015arXiv150500834R}. 
-The dispersion measure
-(DM) is a line-of-site integral of the free electron density and can thus be
-used as a distance estimate, as is routinely done with galactic pulsars.
+Dispersion is characterized by a line-of-site integral of the free electron density known the dispersion measure
+(DM).
 FRB events are observed to have dispersion measures of order
-$1000\,{\rm pc} / {\rm cm}^3$, greatly in excess of
-the galactic expectation of order $100\,{\rm pc} / {\rm cm}^3$, depending on
-galactic latitude
+$\sim\!\!1000 {\rm pc} / {\rm cm}^3$, greatly in excess of
+the galactic expectation of order $\sim\!\!100\,{\rm pc} / {\rm cm}^3$ (depending on
+galactic latitude)
 \cite{2014arXiv1412.4829D}.
-They must therefore be of extra-galactic origin, with their
+They  thus appear to be of extra-galactic origin, with their
 dispersion produced either by the
-inter-galactic medium (IGM) \citep{2013Sci...341...53T} or the
+inter-galactic medium (IGM) \citep{2013Sci...341...53T} surrounding galaxies or the
 environment of the source
 \citep{2014ApJ...785L..26L,2015arXiv150101341P,2015arXiv150505535C}.
-If the dispersion is dominated by the inter-galactic medium,
+If the dispersion is dominated by electrons along the line-of-sight,
 then the average DM--distance relation can be modelled
 \citep{2014ApJ...797...71Z,2004MNRAS.348..999I, 2003ApJ...598L..79I}
-and the sources are at
-cosmological distances of a few gigaparsecs. This would permit
-the study of the clustering of FRB sources in three dimensions which should trace the
+and the sources appear to be at
+cosmological distances of of order $\sim\!\!{\rm Gpc}$. Such cosmological distances permit
+the study of clustering of FRB sources in three dimensions with an expectation that these events trace the
 large-scale structure of the Universe on linear scales. Note that although we
-frame our discussions in terms of FRBs, dispersion may be 
+frame our discussion in terms of FRBs, other bright radio transients that fluctuate on timescales less than the typical lag time of might also be used as standard pings.
 
 
 Neither redshift nor dispersion measure are perfect proxies for radial distance.
