update to not-FRB caveat

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -136,8 +136,7 @@ then the average DM--distance relation can be modelled
 and the sources appear to be at
 cosmological distances of of order $\sim\!\!{\rm Gpc}$. Such cosmological distances permit
 the study of clustering of FRB sources in three dimensions with an expectation that these events trace the
-large-scale structure of the Universe on linear scales. Note that although we
-frame our discussion in terms of FRBs, other bright radio transients that fluctuate on timescales less than the typical lag time of might also be used as standard pings.
+large-scale structure of the Universe on linear scales. We note that while our discussion here is framed in terms of FRBs, other bright radio transients that fluctuate on timescales less than the typical differential lag of $\sim 1s/100 \,{\rm MHz} $ might also be useful as standard pings.
 
 
 Neither redshift nor dispersion measure are perfect proxies for radial distance.
