--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -52,7 +52,7 @@
 \begin{document}
 
 %\title{The large-scale structure of the Universe in dispersion measure space}
-\title{Dispersion Distance and the Matter Distribution of the Universe in Dispersion Space}
+\title{Dispersion distance and the matter distribution of the Universe in dispersion space}
 
 \author{Kiyoshi Wesley Masui}
  \affiliation{Department of Physics and Astronomy, University of British 
@@ -70,22 +70,24 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
     We propose that `standard pings', brief broadband radio impulses, can be
     used to study the three-dimensional clustering of matter in the Universe
     even in the absence of redshift information.  The dispersion of radio waves
-    as they travel through the Universe, like redshift, can be used as a
+    as they travel through the intervening plasma can,
+    like redshift, be used as a
     cosmological distance measure.  Due to inhomogeneities in the electron
-    density along the line-of-siight dispersion is an imperfect proxy for
+    density along the line-of-sight, dispersion is an imperfect proxy for
     radial distance and we show that this leads to calculable dispersion-space
     distortions in the apparent clustering of sources. Fast radio bursts (FRBs)
     are a new class of radio transients that are the prototypical standard
-    ping, and due to their high observed dispersion from intervening plasma,
+    ping, and due to their high observed dispersion,
     have been interpreted as originating at cosmological distances.  The rate
     of fast radio bursts has been estimated to be several thousand over the
     whole sky per day, and if cosmological, the sources of these events should
     trace the large-scale structure of the Universe.  We calculate the
     dispersion-space power spectra for a simple model where electrons and FRBs
     are biased tracers of the large-scale structure of the Universe and show
-    that the clustering signal may be detectable in a survey with as few as
-    $10000$ events.  Upcoming wide-field radio telescopes, like the Canadian
-    Hydrogen Intensity Mapping Experiment (CHIME), are expected to detect...
+    that the clustering signal could be measured using as few as
+    $10000$ events. Such a survey is in-line with what may be achieved with
+    upcoming wide-field radio telescopes such as the Canadian
+    Hydrogen Intensity Mapping Experiment (CHIME).
 \end{abstract}
 
 \maketitle
@@ -108,44 +110,43 @@ candles and standard rulers can be used to estimate distance using brightness
 and angular size respectively.  In the same way a \emph{standard ping}, a brief
 broadband radio impulse, can be used to estimate radial distance because of the
 characteristic $\lambda^2$ dispersion of electromagnetic signals along the
-line-of-sight as a function of wavelength.  This technique, routinely done with pulsars in the Galaxy, can be used to define
-a \emph{dispersion distance} to cosmological sources.  Intriguingly, the dispersion of fast radio bursts (FRB), a new class
-of millisecond duration radio transients first reported by \citet{2007Sci...318..777L}, has been measured with high significance. 
-These bursts are the archetype of a standard ping with 
-10 reported
-\citep{2012MNRAS.425L..71K,2013Sci...341...53T,
-2014ApJ...790..101S, 2014ApJ...792...19B, 
-2015MNRAS.447..246P,2015ApJ...799L...5R} to date and total rate of bursts
-been estimated to be $3.3^{+5}_{-2.5} \times 10^3$
-per sky per day \cite{2015arXiv150500834R}. 
-Dispersion is characterized by a line-of-site integral of the free electron density known the dispersion measure
-(DM).
-FRB events are observed to have dispersion measures of order
-$\sim\!\!1000 {\rm pc} / {\rm cm}^3$, greatly in excess of
-the galactic expectation of order $\sim\!\!100\,{\rm pc} / {\rm cm}^3$ (depending on
-galactic latitude)
-\cite{2014arXiv1412.4829D}.
-They  thus appear to be of extra-galactic origin, with their
-dispersion produced either by the
-inter-galactic medium (IGM) \citep{2013Sci...341...53T} surrounding galaxies or the
-environment of the source
-\citep{2014ApJ...785L..26L,2015arXiv150101341P,2015arXiv150505535C}.
-If the dispersion is dominated by electrons along the line-of-sight,
-then the average dispersion--distance relation can be modelled
-\citep{2014ApJ...797...71Z,2004MNRAS.348..999I, 2003ApJ...598L..79I}
-and the sources appear to be at
-cosmological distances of of order $\sim\!\!{\rm Gpc}$. Such cosmological distances permit
-the study of clustering of FRB sources in three dimensions with an expectation that these events trace the
-large-scale structure of the Universe on linear scales. We note that while our discussion here is framed in terms of FRBs, other bright radio transients that fluctuate on timescales less than the typical differential lag of $\sim 1s/100 \,{\rm MHz} $ might also be useful as standard pings.
-
+line-of-sight as a function of wavelength.  This technique, routinely done with
+pulsars in the Galaxy, can be used to define a \emph{dispersion distance} to
+cosmological sources.  Intriguingly, the dispersion of fast radio bursts (FRB),
+a new class of millisecond duration radio transients first reported by
+\citet{2007Sci...318..777L}, has been measured with high significance.  These
+bursts are the archetype of a standard ping with 10 reported to date
+\citep{2012MNRAS.425L..71K,2013Sci...341...53T, 2014ApJ...790..101S,
+2014ApJ...792...19B, 2015MNRAS.447..246P,2015ApJ...799L...5R}, and with a total
+event rate estimated to be $3.3^{+5}_{-2.5} \times 10^3$ per sky per
+day \cite{2015arXiv150500834R}.  Dispersion is characterized by a line-of-site
+integral of the free electron density known the dispersion measure (DM).  FRB
+events are observed to have dispersion measures of order $\sim\!\!1000 {\rm pc}
+/ {\rm cm}^3$, greatly in excess of the galactic expectation of order
+$\sim\!\!100\,{\rm pc} / {\rm cm}^3$ (depending on galactic latitude)
+\cite{2014arXiv1412.4829D}.  They thus appear to be of extra-galactic origin,
+with their dispersion produced either by the inter-galactic medium (IGM)
+\citep{2013Sci...341...53T} surrounding galaxies along the line-of-sight
+or the environment of the
+source \citep{2014ApJ...785L..26L,2015arXiv150101341P,2015arXiv150505535C}.  If
+the dispersion is dominated by electrons along the line-of-sight, then the
+average dispersion--distance relation can be modelled
+\citep{2014ApJ...797...71Z,2004MNRAS.348..999I, 2003ApJ...598L..79I} and the
+sources appear to be at cosmological distances of of order $\sim\!\!{\rm Gpc}$.
+Such cosmological distances permit the study of clustering of FRB sources in
+three dimensions with an expectation that these events trace the large-scale
+structure of the Universe on linear scales. We note that while our discussion
+here is framed in terms of FRBs, other bright radio transients that fluctuate
+on timescales less than the typical differential lag of $\sim 1s/100 \,{\rm
+MHz} $ might also be useful as standard pings.
 
 Neither redshift nor dispersion are perfect proxies for radial distance.
-Redshifts are systematically biased by the peculiar velocities of the object
+Redshifts are systematically biased by the peculiar velocities of objects
 relative to the Hubble flow. This leads to additional apparent clustering
 in redshift
 space which was first calculated by \citet{1987MNRAS.227....1K}
 using linear theory.
-Similarly, distance estimates from dispersion will be biased by
+Similarly, as we show here, distance estimates from dispersion will be biased by
 inhomogeneities in the electron density \citep{2014ApJ...780L..33M},
 again leading to additional apparent
 clustering of sources in dispersion measure space.  In this letter we calculate
@@ -201,11 +202,11 @@ of the
 redshift-space distortions. Start by noting that the total number of tracers
 in a volume element is the same in both spaces:
 \begin{equation}
-\label{e:density}
 n_{fs}(\vec x_s) \ud^3\vec x_s = n_{f}(\vec x) \ud^3\vec x.
 \end{equation}
 We split the density into a homogeneous part plus perturbations,
 \begin{equation}
+\label{e:density}
     \bar{n}_{fs}(\chi_s)\left[ 1 + \delta_{fs}(\vec x_s)\right] \ud^3\vec x_s
     = \bar{n}_{f}(\chi)\left[ 1 + \delta_f(\vec x)\right] \ud^3\vec x.
 \end{equation}
@@ -249,12 +250,12 @@ we obtain
 In the equation above, the $-\delta_e$ term is most analogous to the Kaiser
 redshift-space distortions.  It is a dilution of tracers in dispersion space due to an
 excess of electrons between the tracers. However we note that this term is isotropic
-in contrast to Kaiser.  This is because any wave vector electron perturbation
+in contrast to the Kaiser term.  This is because any wave vector electron perturbation
 causes dispertion space distortions, whereas the radial velocities that cause
 redshift-space distortions are only sourced by perturbations with radial wave
 vectors.
 
-The $\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}$ arise since the
+The $\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}$ term arises because the
 misinterpretation of the radial distance causes the observed tracer density to
 be compared to the wrong background density. The $\frac{2}{\chi}$ term is
 caused by a misinterpretation of angular distances when the radial distance is
@@ -277,7 +278,7 @@ term as
 
 Large-scale structure is usually studied through its two-point statistics, most
 commonly the power spectrum, $P(k)$.
-Unlike in redshift-space distortions, Equation~\ref{e:delta_s} does not have a
+Unlike the redshift-space distortions, Equation~\ref{e:delta_s} does not have a
 simple form in harmonic space. The equation's third term couples harmonic modes
 and thus the two-point statistics cannot be phrased as a simple power spectrum.
 We will instead use $C^{ss}_\ell(\chi,\chi')$, which is
@@ -306,7 +307,7 @@ dependence, the angular cross-power spectrum of such tracers is
 In reality the power spectrum evolves on the order of a Hubble time.
 The angular cross correlations will be very small unless $\chi$ and $\chi'$ are
 within a few correlation lengths of one another, roughly a hundred
-megaparsecs.  The evolution of the power-spectrum is negligible over these time
+megaparsecs.  The evolution of the power spectrum is negligible over these time
 differences which leads to a straight-forward way to include the evolution of
 the perturbations:
 \begin{align}
@@ -458,7 +459,7 @@ There is an advantage to the lack of kernel in the dispersion-space integral ter
 Lensing tomography---the use of sources at multiple redshifts to un-mix
 spatial scales---is complicated by the kernel. The kernel's shape depends on
 the source redshift, re-weighting the line-of-sight integral and
-making tomography inexact.  In contrast the integrand in the dispersion-space integral
+making tomography inexact.  In contrast, the integrand in the dispersion-space integral
 term is completely independent of the limit of integration, meaning
 contributions from different parts of the line of sight (and thus different
 spatial scales) can be separated exactly. A detailed study of dispersion space
@@ -486,7 +487,7 @@ the intrinsic luminosity function has the form from
 luminosity function and at
 a radial distance of $\chi=2350\,{\rm Mpc}/h$ are at the flux detection threshold.
 This source density is shown in Figure~\ref{f:n_f} with the resulting dispersion-space
-power-spectrum in Figure~\ref{f:terms}.
+power spectrum in Figure~\ref{f:terms}.
 
 \begin{figure}
     \includegraphics[scale=0.42]{figures/n_f}
@@ -494,7 +495,7 @@ power-spectrum in Figure~\ref{f:terms}.
         \label{f:n_f}
         \emph{Top:} Comoving density of sources in toy model, as described in
         text. Normalization is
-        such that the survey has a total of $10^4$ FRB events.
+        such that the survey has a total of $10000$ FRB events.
         \emph{Bottom:} Resulting coefficient $A(\chi)$ as given in
         Equation~\ref{e:A}.
     }
@@ -514,24 +515,6 @@ power-spectrum in Figure~\ref{f:terms}.
     }
 \end{figure}
 
-In first measurements of the angular power spectra, uncertainty will be
-dominated by the finite number of observed events, or shot noise.
-The noise power spectrum on shells with of width
-$\Delta \chi$ is
-\begin{equation}
-    C^N_{\ell, ij} = \frac{\delta_{ij}}{\bar n_f(\chi_i)\chi_i^2\Delta\chi}.
-\end{equation}
-Here, to indicate that we are now working with quantities binned in the radial
-direction instead of
-continuous functions, we've switched to $C_{\ell,ij}$ instead of
-$C_\ell(\chi, \chi')$. The uncertainty on the angular
-cross-power spectrum is then
-\begin{align}
-    (\Delta{C^{ss}_{\ell,ij}})^2 = 
-    {\frac{1}{\ell(\ell + 1)\Delta \ell f_{\rm sky}}}
-        \left[C^N_{\ell,ii} C^N_{\ell,jj} +  (C^N_{\ell,ij})^2\right],
-\end{align}
-where the second term in brackets only contributes for $i = j$.
 
 There are a number of effects that will complicate the measurement of the
 above calculated angular power spectrum by a real survey of dispersion 
@@ -563,20 +546,39 @@ Detailed treatment of the above complications is beyond the scope of this
 work. The magnitude of the contribution from the progenitor is at present
 unknown. To crudely deal with it here we use relatively large
 bins widths of $\Delta\chi = 100\,{\rm Mpc}/h$ 
-and exclude the $\chi_i = \chi_j$ bin pairs.
+and exclude the $\chi = \chi'$ bin pairs.
 Because the local term drops rapidly with radial separations, this effectively 
 discards the contribution from the local term which is most sensitive to having
 precise radial distances.
 
-We consider the sensitivity of a survey with a total of $10^4$ dispersion
+In first measurements of the angular power spectra, uncertainty will be
+dominated by the finite number of observed events, or shot noise.
+The noise power spectrum on shells with of width
+$\Delta \chi$ is
+\begin{equation}
+    C^N_{\ell, ij} = \frac{\delta_{ij}}{\bar n_f(\chi_i)\chi_i^2\Delta\chi}.
+\end{equation}
+Here, to indicate that we are now working with quantities binned in the radial
+direction instead of
+continuous functions, we've switched to $C_{\ell,ij}$ instead of
+$C_\ell(\chi, \chi')$. The uncertainty on the angular
+cross-power spectrum is then
+\begin{align}
+    (\Delta{C^{ss}_{\ell,ij}})^2 = 
+    {\frac{1}{\ell(\ell + 1)\Delta \ell f_{\rm sky}}}
+        \left[C^N_{\ell,ii} C^N_{\ell,jj} +  (C^N_{\ell,ij})^2\right],
+\end{align}
+where the second term in brackets only contributes for $i = j$.
+
+We consider the sensitivity of a survey with a total of $10000$ dispersion
 measures from FRB events distributed uniformly over half the sky. This is in rough
-approximation to what could be achieved by the Canadian Hydrogen Intensity
-Mapping Experiment's now funded FRB instrument over a three year survey.
+approximation to what might be achieved by the Canadian Hydrogen Intensity
+Mapping Experiment (CHIME) telescope over a three year survey.
 To give an idea of the overall sensitivity of the survey, we collapse
 $C^{ss}_{\ell,ij}$ to a single function of $\ell$ by taking a weighted average
 of all pairs of radial bins over the
 range $500\,{\rm Mpc}/h$ to $3500\,{\rm Mpc}/h$.
-For weights in the radial bin average, we use the signal over noise-squared
+For weights we use the signal over noise-squared
 at $\ell=100$, which maximizes the signal to noise at that $\ell$ and
 is near optimal at other multipoles.
 The result is shown
@@ -586,7 +588,7 @@ in Figure~\ref{f:sensitivity}.
     \includegraphics[scale=0.42]{figures/sensitivity}
     \caption{
         \label{f:sensitivity}
-        Sensitivity of a survey with $10^4$ dispersion measures distributed
+        Sensitivity of a survey with $10000$ dispersion measures distributed
         uniformly over half the sky.  Plotted is the cross-correlation
         power spectrum weighted averaged over all pairs of radial bins. Weights
         are chosen to maximize signal to noise at $\ell=100$.
@@ -600,7 +602,8 @@ using dispersion to estimate radial distance. It can be seen in
 Figure~\ref{f:terms} that the signal is dominated by inhomogeneities in the
 electron density along the line of sight inducing mis-estimates of radial
 distance and thus apparent clustering. These dispersion-space distortions could be used
-to study the distribution of free electrons in the Universe on large-scales.
+to study the distribution of free electrons in the Universe on large-scales and
+redshifts less than $\sim\!\!1$.
 There have been other proposals to use FRB events to study large-scale
 structure \citep{2014ApJ...780L..33M,2014MNRAS.443L..11D}, however these
 schemes have either been two dimensional or required externally measured redshifts
@@ -610,7 +613,7 @@ history of the Universe
 \citep{2014ApJ...783L..35D,2014PhRvD..89j7303Z,2014ApJ...788..189G}.
 
 We have
-shown that a survey detecting $10^4$ fast radio bursts of cosmological
+shown that a survey detecting $10000$ fast radio bursts of cosmological
 origin (as might be achieved by the CHIME FRB instrument) could detect the
 clustering signal.
 Looking forward, dispersion-space
