Edits to intro.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -105,28 +105,33 @@ surveys have now aggregated the positions of millions of galaxies into three
 dimensional density maps, exposing a rich structure of clusters, filaments,
 walls and voids.
 
-However, redshift is not the only measure of radial distance.   Standard
+However, redshift is not the only measure of radial distance. Standard
 candles and standard rulers can be used to estimate distance using brightness
 and angular size respectively.  In the same way a \emph{standard ping}, a brief
-broadband radio impulse, can be used to estimate radial distance because of the
-characteristic $\lambda^2$ dispersion of electromagnetic signals along the
-line-of-sight as a function of wavelength.  This technique, routinely done with
+broadband radio impulse, can be used to measure dispersion through the
+characteristic wavelength-squared delay of electromagnetic signals. The disperion is
+proportional to the amount of plasma along the
+line-of-sight and can thus be used to estimate radial distance.
+This technique, routinely done with
 pulsars in the Galaxy, can be used to define a \emph{dispersion distance} to
-cosmological sources.  Intriguingly, the dispersion of fast radio bursts (FRB),
+cosmological sources.
+%
+Dispersion is readily measured from fast radio bursts (FRB),
 a new class of millisecond duration radio transients first reported by
-\citet{2007Sci...318..777L}, has been measured with high significance.  These
-bursts are the archetype of a standard ping with 10 reported to date
+\citet{2007Sci...318..777L}, which are the archetype of a standard ping.
+Ten such bursts have been reported to date
 \citep{2012MNRAS.425L..71K,2013Sci...341...53T, 2014ApJ...790..101S,
-2014ApJ...792...19B, 2015MNRAS.447..246P,2015ApJ...799L...5R}, and with a total
-event rate estimated to be $3.3^{+5}_{-2.5} \times 10^3$ per sky per
-day \cite{2015arXiv150500834R}.  Dispersion is characterized by a line-of-site
+2014ApJ...792...19B, 2015MNRAS.447..246P,2015ApJ...799L...5R}, and the total
+event rate has been estimated to be $3.3^{+5}_{-2.5} \times 10^3$ per sky per
+day \cite{2015arXiv150500834R}.
+Dispersion is characterized by a line-of-site
 integral of the free electron density known the dispersion measure (DM).  FRB
-events are observed to have dispersion measures of order $\sim\!\!1000 {\rm pc}
+events are observed to have dispersion measures of order $\sim\!\!1000\,{\rm pc}
 / {\rm cm}^3$, greatly in excess of the galactic expectation of order
 $\sim\!\!100\,{\rm pc} / {\rm cm}^3$ (depending on galactic latitude)
 \cite{2014arXiv1412.4829D}.  They thus appear to be of extra-galactic origin,
 with their dispersion produced either by the inter-galactic medium (IGM)
-\citep{2013Sci...341...53T} surrounding galaxies along the line-of-sight
+surrounding galaxies along the line-of-sight \citep{2013Sci...341...53T}
 or the environment of the
 source \citep{2014ApJ...785L..26L,2015arXiv150101341P,2015arXiv150505535C}.  If
 the dispersion is dominated by electrons along the line-of-sight, then the
@@ -466,9 +471,9 @@ spatial scales) can be separated exactly. A detailed study of dispersion space
 tomography is beyond the scope of this work.  To avoid our results being
 sensitive to the hard-to-model small scales, we assume that the contribution to the
 integral term from radial distances $\chi'' < 500\,{\rm Mpc}/h$ are well
-measured by the correlations with these radial slices. We thus neglect the
-information from these slices in our sensitivity measurements and ignore
-contributions to the integral term from below this distance. The smallest
+measured by the correlations with these radial slices. We thus ignore
+contributions to the integral term from below this distance and neglect the
+information from these slices in our sensitivity measurements. The smallest
 spatial scale that contributes the our plotted angular power spectra out to
 $\ell=1000$ is thus $k=2\,h/{\rm Mpc}$.
 
